packages/v1/CHANGELOG.md
# @sovryn/joe-sdk

## 5.0.5

### Patch Changes

- d841c51: chore: change contract addresses

## 5.0.4

### Patch Changes

- 77e2deb: chore: add new bob testnet
- Updated dependencies [77e2deb]
  - @sovryn/joe-core@2.0.4

## 5.0.3

### Patch Changes

- 5969902: fix: chain id and factory address
- Updated dependencies [5969902]
  - @sovryn/joe-core@2.0.3

## 5.0.2

### Patch Changes

- 76fb1d0: fix vite
- Updated dependencies [76fb1d0]
  - @sovryn/joe-core@2.0.2

## 5.0.1

### Patch Changes

- 6e905b7: bump viem to v2
- Updated dependencies [6e905b7]
  - @sovryn/joe-core@2.0.1

## 5.0.0

### Major Changes

- 9ab3159: add mantle chain id

### Patch Changes

- Updated dependencies [9ab3159]
  - @sovryn/joe-core@2.0.0

## 4.1.2

### Patch Changes

- 8a0aa52: update boring helper address

## 4.1.1

### Patch Changes

- 3dfd4a5: update farm lens v2 address

## 4.1.0

### Minor Changes

- 8065d41: Add support for Ethereum

### Patch Changes

- Updated dependencies [8065d41]
  - @sovryn/joe-core@1.1.0

## 4.0.8

### Patch Changes

- 2f2e1c4: Package release from mono-repo
- Updated dependencies [2f2e1c4]
  - @sovryn/joe-core@1.0.1
