packages/v2/CHANGELOG.md
# @sovryn/joe-sdk-v2

## 3.0.15

### Patch Changes

- d841c51: chore: change contract addresses

## 3.0.14

### Patch Changes

- chore: change multicall address

## 3.0.13

### Patch Changes

- 77e2deb: chore: add new bob testnet
- Updated dependencies [77e2deb]
  - @sovryn/joe-core@2.0.4

## 3.0.12

### Patch Changes

- 5969902: fix: chain id and factory address
- Updated dependencies [5969902]
  - @sovryn/joe-core@2.0.3

## 3.0.11

### Patch Changes

- db652ea: update lb hook lens address

## 3.0.10

### Patch Changes

- 76fb1d0: fix vite
- Updated dependencies [76fb1d0]
  - @sovryn/joe-core@2.0.2

## 3.0.9

### Patch Changes

- 216d65b: fix sdk-v2 with Vite

## 3.0.8

### Patch Changes

- 4ce49f5: update lb hooks lens abi

## 3.0.7

### Patch Changes

- 9ee1953: add LBHooksLens ABI

## 3.0.6

### Patch Changes

- a347ba7: add v22

## 3.0.5

### Patch Changes

- e744663: update mantle addresses

## 3.0.4

### Patch Changes

- 83d17ba: update contract addresses

## 3.0.3

### Patch Changes

- 72c1ef4: update mantle quoter address

## 3.0.2

### Patch Changes

- c0407d8: add mantle addresses

## 3.0.1

### Patch Changes

- 6e905b7: bump viem to v2
- Updated dependencies [6e905b7]
  - @sovryn/joe-core@2.0.1

## 3.0.0

### Major Changes

- 9ab3159: add mantle chain id

### Patch Changes

- Updated dependencies [9ab3159]
  - @sovryn/joe-core@2.0.0

## 2.1.8

### Patch Changes

- 6d5a6e3: fix getCurveDistributionFromBinRange when sigma is 0

## 2.1.7

### Patch Changes

- 498eb52: fix get curve distribution params

## 2.1.6

### Patch Changes

- 75d84d4: rewrite get distribution params functions

## 2.1.5

### Patch Changes

- f8731f5: fix getUniformDistributionFromBinRange

## 2.1.4

### Patch Changes

- c8a3d73: expose contract address

## 2.1.3

### Patch Changes

- a774142: add apt-farm-lens addresses

## 2.1.2

### Patch Changes

- 6168dc8: add apt-farm-lens abi

## 2.1.1

### Patch Changes

- 29f2f07: fix eth dexcandles subgraph url

## 2.1.0

### Minor Changes

- 8065d41: Add support for Ethereum

### Patch Changes

- Updated dependencies [8065d41]
  - @sovryn/joe-core@1.1.0

## 2.0.12

### Patch Changes

- cd2ce5e: Update limit order manager and quoter v21 ABI

## 2.0.11

### Patch Changes

- dd56a09: Update limit order manager and v21 quoter addresses

## 2.0.10

### Patch Changes

- 2f2e1c4: Package release from mono-repo
- Updated dependencies [2f2e1c4]
  - @sovryn/joe-core@1.0.1
